<resources>
    <string name="app_name">HabbitTrainer</string>
    <string name="habbit_icon">Habbit icon</string>
    <string name="drink_water_desc">A refreshing glass of water gets you hydrated</string>
    <string name="drink_water">Drink Water</string>
    <string name="begin_new_habbit">Add habbit…</string>
    <string name="edit_title_hint">Eat an apple</string>
    <string name="edit_description_hint">An apple a day keeps the doctor away</string>
    <string name="choose_image">Choose image…</string>
    <string name="selected_image">Selected image</string>
    <string name="save">Save</string>
</resources>
